# iroh-minecraft

./: .gitignore  Cargo.toml  secret_key.txt
src/: client.rs  main.rs
